--- a/src/app/styles/vars.scss
+++ b/src/app/styles/vars.scss
@@ -1,7 +1,9 @@
 $main: #f7f5fa;
+$gray-3: #eeeaf5;
 $gray-5: #a8a6ac;
 $gray-7: #2a282f;
 $text-color: white;
+$black: black;
 
 $sm: 36em;
 $md: 48em;
@@ -33,4 +35,12 @@ $breakpoints: (
   -webkit-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.15);
   -moz-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.15);
   box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.15);
+}
+
+@mixin transition {
+  -webkit-transition: all 0.3s ease-out;
+  -moz-transition: all 0.3s ease-out;
+  -ms-transition: all 0.3s ease-out;
+  -o-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
 }
