feat: add human cards

--- a/src/app/styles/vars.scss
+++ b/src/app/styles/vars.scss
@@ -2,8 +2,12 @@ $main: #f7f5fa;
 $gray-3: #eeeaf5;
 $gray-5: #a8a6ac;
 $gray-7: #2a282f;
+$white: white;
 $text-color: white;
 $black: black;
+$second: #483efb;
+$second-hover: #002756;
+$red: #ff0915;
 
 $sm: 36em;
 $md: 48em;
