--- a/src/components/SearchBar/SearchBar.module.scss
+++ b/src/components/SearchBar/SearchBar.module.scss
@@ -7,7 +7,7 @@
   &__wrapper {
     display: flex;
     align-items: center;
-    border: 1px solid black;
+    border: 1px solid $gray-5;
     border-radius: 10px;
   }
 
@@ -16,15 +16,16 @@
   }
 
   &__input {
-    padding: 5px;
+    padding: 10px;
     border-radius: 10px;
     border: none;
     outline: none;
   }
 
   &__icon {
-    width: 18px;
-    height: 18px;
-    padding: 5px;
+    width: 20px;
+    height: 20px;
+    margin: auto;
+    padding-left: 5px;
   }
 }
