feat: add skeleton

--- a/src/app/styles/vars.scss
+++ b/src/app/styles/vars.scss
@@ -9,6 +9,8 @@ $second: #483efb;
 $second-hover: #002756;
 $red: #ff0915;
 $green: #0fa80f;
+$skeleton-color: #e0e0e2;
+$skeleton-color2: #ededee;
 
 $sm: 36em;
 $md: 48em;
