--- a/src/pages/Main/Main.module.scss
+++ b/src/pages/Main/Main.module.scss
@@ -2,4 +2,11 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+
+  &__skeletons {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    padding: 0;
+  }
 }
