--- a/src/app/styles/vars.scss
+++ b/src/app/styles/vars.scss
@@ -11,18 +11,15 @@ $red: #ff0915;
 $green: #0fa80f;
 $skeleton-color: #e0e0e2;
 $skeleton-color2: #ededee;
-
 $sm: 36em;
 $md: 48em;
 $lg: 62em;
 $gl: 64em;
 $xl: 75em;
-
 $col-sm: 540px;
 $col-md: 720px;
 $col-lg: 960px;
 $col-xl: 1140px;
-
 $breakpoints: (
   sm: $sm,
   md: $md,
@@ -39,15 +36,9 @@ $breakpoints: (
 }
 
 @mixin shadow {
-  -webkit-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.15);
-  -moz-box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.15);
-  box-shadow: 0px 5px 10px 2px rgba(34, 60, 80, 0.15);
+  box-shadow: 0 5px 10px 2px rgb(34 60 80 / 15%);
 }
 
 @mixin transition {
-  -webkit-transition: all 0.3s ease-out;
-  -moz-transition: all 0.3s ease-out;
-  -ms-transition: all 0.3s ease-out;
-  -o-transition: all 0.3s ease-out;
   transition: all 0.3s ease-out;
 }
