--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,4 +1,4 @@
-@import './reset.scss';
-@import './normalize.css';
-@import './vars.scss';
-@import './base.scss';
+@import url('./reset');
+@import url('./normalize.css');
+@import url('./vars');
+@import url('./base');
