--- a/src/components/Form/Form.module.scss
+++ b/src/components/Form/Form.module.scss
@@ -1,22 +1,24 @@
 .form {
+  @include shadow;
   display: flex;
   flex-direction: column;
   gap: 5px;
+
   max-width: 1200px;
   padding: 15px;
+
   border-radius: 10px;
-  @include shadow;
 
   &__input {
-    border: 1px solid $gray-5;
     padding: 10px;
+    border: 1px solid $gray-5;
     border-radius: 10px;
     outline: none;
   }
 
   &__gender {
     position: relative;
-    padding: 0 0 25px 0;
+    padding: 0 0 25px;
 
     &Inner {
       display: flex;
