--- a/src/components/HumanList/HumanList.module.scss
+++ b/src/components/HumanList/HumanList.module.scss
@@ -5,12 +5,13 @@
   padding: 0;
 }
 
-@media (max-width: 991px) {
+@media (width <= 991px) {
   .humanList {
     grid-template-columns: repeat(3, 1fr);
   }
 }
-@media (max-width: 767px) {
+
+@media (width <= 767px) {
   .humanList {
     grid-template-columns: repeat(2, 1fr);
   }
