--- a/src/components/InputContainer/InputContainer.module.scss
+++ b/src/components/InputContainer/InputContainer.module.scss
@@ -1,5 +1,5 @@
 .inputContainer {
-  padding: 0 0 25px 0;
+  padding: 0 0 25px;
 
   &__label {
     display: flex;
@@ -7,7 +7,7 @@
     text-transform: capitalize;
 
     &Message {
-      margin: 0 0 7px 0;
+      margin: 0 0 7px;
     }
   }
 
