fix: return correct import syntax

--- a/src/app/styles/index.scss
+++ b/src/app/styles/index.scss
@@ -1,4 +1,4 @@
-@import url('./reset');
-@import url('./normalize.css');
-@import url('./vars');
-@import url('./base');
+@import './reset';
+@import './normalize.css';
+@import './vars';
+@import './base';
