feat: add modal

--- a/src/app/styles/vars.scss
+++ b/src/app/styles/vars.scss
@@ -2,6 +2,7 @@ $main: #f7f5fa;
 $gray-3: #eeeaf5;
 $gray-5: #a8a6ac;
 $gray-7: #2a282f;
+$gray-7-50: #2a282f66;
 $white: white;
 $text-color: white;
 $black: black;
@@ -10,7 +11,7 @@ $second-hover: #002756;
 $red: #ff0915;
 $green: #0fa80f;
 $skeleton-color: #e0e0e2;
-$skeleton-color2: #ededee;
+$skeleton-color-2: #efeff1;
 $sm: 36em;
 $md: 48em;
 $lg: 62em;
