--- a/src/pages/Main/Main.module.scss
+++ b/src/pages/Main/Main.module.scss
@@ -9,4 +9,11 @@
     gap: 20px;
     padding: 0;
   }
+
+  &__error {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 70vh;
+  }
 }
