--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -1,8 +1,14 @@
 .card {
   @include shadow;
+  cursor: pointer;
+
   display: flex;
   flex-direction: column;
+
+  padding: 0;
+
   background-color: $main;
+  border: none;
   border-radius: 12px;
 
   &__image {
@@ -14,12 +20,15 @@
   &__header {
     position: relative;
     display: flex;
+    width: 100%;
   }
 
   &__content {
     display: flex;
     flex-direction: column;
     gap: 8px;
+
+    width: 100%;
     padding: 16px;
   }
 
