feat: add tests

--- a/src/components/UI/Button/Button.module.scss
+++ b/src/components/UI/Button/Button.module.scss
@@ -17,4 +17,9 @@
   &:hover {
     background-color: $second-hover;
   }
+
+  &:disabled {
+    cursor: default;
+    background-color: $second-disabled;
+  }
 }
