--- a/src/app/styles/vars.scss
+++ b/src/app/styles/vars.scss
@@ -7,6 +7,7 @@ $white: white;
 $text-color: white;
 $black: black;
 $second: #483efb;
+$second-disabled: #4d4c66;
 $second-hover: #002756;
 $red: #ff0915;
 $green: #0fa80f;
